# kattis

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
kattis/: abc.py  cold.py  fizzbuzz.py  heartrate.py  oddities.py  pot.py  quadrant.py  r2.py  speedlimit.py  twostones.py
tests/: test_quadrant.py  test_r2.py  test_twostones.py
