[tool.poetry]
name = "kattis"
version = "0.1.0"
description = ""
authors = ["Ali Mchawrab <alimchawrab159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
